bookinfo/overlay/config/domain/kapoozi.com/istio/0.baseline/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bookinfo-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - 'bookinfo.kapoozi.com'
    port:
      name: http
      number: 80
      protocol: HTTP
